# axum-test

./: .env  Cargo.toml
migrations/: schema.sql
src/: auth.rs  helpers.rs  main.rs  posts.rs  routes.rs  users.rs
