[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-session = "3.0.0"
async-sqlx-session = { version = "0.4.0", features = ["pg"] }
axum = { version = "0.5.13", features = ["headers"] }
dotenv = "0.15.0"
rust-argon2 = "1.0.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
